# GPT3

./: README.md  example.py  pyproject.toml
gpt3/: __init__.py  gpt3.py  model.py  train.py
